--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,30 @@
 body {
     font-family: Arial, sans-serif;
     text-align: center;
+    background-color: rgb(209, 209, 255); 
   }
-  
+/*###############3 INICIO CUERPO DEL JUEGO ##################*/
   .game {
     margin: 50px auto;
-    width: 300px;
+  width: 460px; 
+  background: linear-gradient(135deg, rgb(139, 139, 255) 43%, rgb(164, 164, 252) 43%);
+  padding: 10px 80px 10px 80px;
+  border-radius: 10px; 
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2); 
   }
   
   .options {
     display: flex;
     justify-content: space-between;
     margin-bottom: 20px;
+    font-weight: bold;
   }
-  
   .option {
     padding: 10px 20px;
     font-size: 16px;
-    background-color: #f0f0f0;
+    font-weight: bold;
+    background-color: #025defad;
+    border-radius: 5%;
     border: none;
     cursor: pointer;
   }
@@ -26,10 +33,75 @@ body {
     font-size: 18px;
     margin-bottom: 10px;
   }
-  
+  h1{
+    position: relative;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 70px;
+    color: rgb(7, 55, 199);
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8); 
+  }
+  h2
+  {
+    font-size: 24px;
+    color: rgb(12, 14, 23);
+    margin-bottom: 5px;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+  }
   img {
     max-width: 100%;
     height: auto;
-    margin-top: 20px;
+    border-radius: 5%;
+    border: black 2px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
   }
-  
+  /* ####################3FIN CUERPO DEL JUEGO ###############3*/
+/*############################Inicio aviso ##############################*/
+  .modal {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 500;
+  color: rgb(7, 7, 22);
+  font-size: 40px;
+}
+
+.modal-content {
+  background-color: rgb(175, 175, 175);
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.2);
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.modal.active {
+  display: block;
+}
+.modal-content button {
+  padding: 15px 30px;
+  font-size: 25px;
+  background-color: #025defad;
+  border-radius: 5%;
+  border: none;
+  cursor: pointer;
+  color: rgba(21, 21, 21, 0.958); 
+  font-weight: bold; 
+  transition: background-color 0.3s; /* Transición suave al pasar el mouse */
+}
+
+.modal-content button:hover {
+  background-color: #025def; /* Cambia el color de fondo al pasar el mouse */
+}
+#winner,
+#loser,
+#aviso {
+  font-weight: bold; /* Agrega negrita al texto */
+}
+/*############################Fin aviso ##############################*/
